z-index fixed

--- a/assignment-no-2/css/style.css
+++ b/assignment-no-2/css/style.css
@@ -41,6 +41,7 @@ body{
 .digital-watch{
     font-size: 40px;
     padding-top: 10px;
+    z-index: 99;
 }
 .title{
     position: absolute;
@@ -65,6 +66,7 @@ body{
 }
 .stop-watch{
     font-size: 40px;
+    z-index: 99;
 }
 .btn-container button{
     background-color: #ff0000;
@@ -79,4 +81,8 @@ body{
     justify-content: center;
     width: 100%;
     column-gap: 20px;
+    z-index: 99;
+}
+.timeFormat-container{
+    z-index: 99;
 }
